tests/error/ev.gw
#! [contains] NullPtrException
Event ref e;
e => now;
